--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "^4.0.0",
     "angular-font-awesome": "^2.2.0",
     "angular2-auth": "^0.1.7",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "intl": "^1.2.5",
     "rxjs": "^5.4.1",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
