--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "ahoy.js": "^0.2.1",
     "angular-font-awesome": "^2.2.0",
     "angular2-auth": "^0.1.7",
     "classlist.js": "^1.1.20150312",
