--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
+    "ng-imgcache": "^1.0.1",
     "rxjs": "^5.4.1",
+    "url-search-params-polyfill": "^2.0.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
