--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "ahoy.js": "^0.2.1",
     "angular-font-awesome": "^2.2.0",
     "angular2-auth": "^0.1.7",
+    "bootstrap": "^3.3.7",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
+    "materialize-css": "^1.0.0-beta",
     "ng-imgcache": "^1.0.1",
     "rxjs": "^5.4.1",
     "url-search-params-polyfill": "^2.0.2",
